# roamer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  attraction_agent.py  base_agent.py  conversation_manager.py  coordinator_agent.py  display.py  logistic_agent.py
app/agents/: __init__.py  attraction_agent.py  base_agent.py  conversation_manager.py  coordinator_agent.py  logistic_agent.py  validation.py
app/agents/tests/: test_conversation_manager.py  test_coordinator_agent.py  test_logistic_agent.py  test_validation.py
app/config/: __init__.py
app/ui/: __init__.py  builders.py  components.py  manager.py  messages.py  state.py
config/: __init__.py  config.py
tests/: __init__.py  test_attraction_agent.py  test_base_agent.py  test_display.py
